{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 34,
  "lineage": "8c266450-cae2-54cb-5107-c0483a404a4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1969c0c95c1cf51",
            "arn": "arn:aws:ec2:eu-west-2:446842368972:elastic-ip/eipalloc-0a1969c0c95c1cf51",
            "association_id": "eipassoc-0c9d1ff496b8be301",
            "domain": "vpc",
            "id": "eipalloc-0a1969c0c95c1cf51",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b7942cc9a2711636",
            "private_dns": "ip-10-0-1-221.eu-west-2.compute.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-18-133-108-1.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.108.1",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-2",
            "tags": {
              "Name": "aws-vpc-terraform-project-nat-eip"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "eipalloc-0a1969c0c95c1cf51",
            "region": "eu-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0210de0e8f4376a93",
            "arn": "arn:aws:ec2:eu-west-2:446842368972:instance/i-028509e2ff12dc49f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028509e2ff12dc49f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-vpc-terraform-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c13c76863ceae1f0"
              }
            ],
            "primary_network_interface_id": "eni-0c13c76863ceae1f0",
            "private_dns": "ip-10-0-1-86.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-35-176-176-129.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.176.129",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb2138f04af65d76",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088f0969566b46352",
            "tags": {
              "Name": "aws-vpc-terraform-project-bastion"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c1bf040de305c8f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "i-028509e2ff12dc49f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0210de0e8f4376a93",
            "arn": "arn:aws:ec2:eu-west-2:446842368972:instance/i-0b336280eecd94c67",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b336280eecd94c67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-vpc-terraform-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b48574595ce45330"
              }
            ],
            "primary_network_interface_id": "eni-0b48574595ce45330",
            "private_dns": "ip-10-0-2-125.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.125",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8f4baf9deccbd69",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0874f851af24016e9",
            "tags": {
              "Name": "aws-vpc-terraform-project-private-instance"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbb20e0291b3b8e1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "i-0b336280eecd94c67",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.bastion_sg",
            "aws_security_group.private_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:internet-gateway/igw-0c40cde9f9dce6903",
            "id": "igw-0c40cde9f9dce6903",
            "owner_id": "446842368972",
            "region": "eu-west-2",
            "tags": {
              "Name": "aws-vpc-terraform-project-igw"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-igw"
            },
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "igw-0c40cde9f9dce6903",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1969c0c95c1cf51",
            "association_id": "eipassoc-0c9d1ff496b8be301",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b2bdd5091cbd0041",
            "network_interface_id": "eni-0b7942cc9a2711636",
            "private_ip": "10.0.1.221",
            "public_ip": "18.133.108.1",
            "region": "eu-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088f0969566b46352",
            "tags": {
              "Name": "aws-vpc-terraform-project-nat-gateway"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-nat-gateway"
            },
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "nat-0b2bdd5091cbd0041",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0edd2286f8ba87e671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2bdd5091cbd0041",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0edd2286f8ba87e67",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0edd2286f8ba87e67"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c40cde9f9dce6903",
            "id": "r-rtb-0dff99515a92b2f791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0dff99515a92b2f79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0dff99515a92b2f79"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:route-table/rtb-0edd2286f8ba87e67",
            "id": "rtb-0edd2286f8ba87e67",
            "owner_id": "446842368972",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2bdd5091cbd0041",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-vpc-terraform-project-private-rt"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "rtb-0edd2286f8ba87e67",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:route-table/rtb-0dff99515a92b2f79",
            "id": "rtb-0dff99515a92b2f79",
            "owner_id": "446842368972",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c40cde9f9dce6903",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-vpc-terraform-project-public-rt"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "rtb-0dff99515a92b2f79",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003bf55e28788587d",
            "region": "eu-west-2",
            "route_table_id": "rtb-0edd2286f8ba87e67",
            "subnet_id": "subnet-0874f851af24016e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "rtbassoc-003bf55e28788587d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03355d3fa4b5b0ed3",
            "region": "eu-west-2",
            "route_table_id": "rtb-0dff99515a92b2f79",
            "subnet_id": "subnet-088f0969566b46352"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "rtbassoc-03355d3fa4b5b0ed3",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:security-group/sg-06c1bf040de305c8f",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c1bf040de305c8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere - lab only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-vpc-terraform-project-bastion-sg",
            "name_prefix": "",
            "owner_id": "446842368972",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-vpc-terraform-project-bastion-sg"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "sg-06c1bf040de305c8f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:security-group/sg-0bbb20e0291b3b8e1",
            "description": "Allow SSH from bastion host only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbb20e0291b3b8e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06c1bf040de305c8f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-vpc-terraform-project-private-sg",
            "name_prefix": "",
            "owner_id": "446842368972",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-vpc-terraform-project-private-sg"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "sg-0bbb20e0291b3b8e1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:subnet/subnet-0874f851af24016e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874f851af24016e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446842368972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "aws-vpc-terraform-project-private-subnet"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-private-subnet"
            },
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "subnet-0874f851af24016e9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:subnet/subnet-088f0969566b46352",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088f0969566b46352",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446842368972",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "aws-vpc-terraform-project-public-subnet"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-public-subnet"
            },
            "vpc_id": "vpc-02bfeda46caa32515"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "subnet-088f0969566b46352",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:446842368972:vpc/vpc-02bfeda46caa32515",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09df153da7bc454db",
            "default_route_table_id": "rtb-064759f6c46e8ecd8",
            "default_security_group_id": "sg-01cb78fe31bfa613f",
            "dhcp_options_id": "dopt-87a3fdef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bfeda46caa32515",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064759f6c46e8ecd8",
            "owner_id": "446842368972",
            "region": "eu-west-2",
            "tags": {
              "Name": "aws-vpc-terraform-project-vpc"
            },
            "tags_all": {
              "Name": "aws-vpc-terraform-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446842368972",
            "id": "vpc-02bfeda46caa32515",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}